  			"thanked" by using the button adjacent to the "REVISION_ID" line
  			of the "metadata" panel. A link color change from blue->red indicates
  			action success. "Thanking" is tied to specific revision-ids,
  			justifying this placement. It was not made an explicit classification
  			button and tied to the "innocent" outcome as such a promotion seems
  			like mission-creep for an anti-vandalism tool (T#055).
  		# The fact an article is CSD ("candidate for speedy deletion") can now
  			be noted atop diffs, similar to how the "this will rollback 'n' edits"
  			note appears. This functionality is enabled by default, but can be 
  			turned off via the "options" menu (T#052).
  		# First attempt at solving MacOS GUI layout issues. These seemed to stem
  			from the fact MacOS enforces a border on JButtons (T#054).
  		# Minor change w.r.t. to height of "watchlist options" drop-down,
  			which seems to have no default minimum height
  		# Minor change to make login error messages more descriptive
  
  * 2016-02-12 - EMERGENCY RELEASE
  		# Addition of a deprecation message to API login procedure fouled our
  		  parsing, breaking login functionality. Fixed and updated required.
  		# Cleaned up code transitioning to implicitly-managed CookieManager
  
  * 2016-01-22 - EMERGENCY RELEASE
  		# Seemingly related to WMF changes in the "SessionManager" module,
  		  the way STiki handles cookies needed to be modified. Because sessions
  		  were failing, edit tokens were not being obtained, and all
  		  revert/editing actions were failing. This breaks all functionality
  		  and an update requirement is being pushed. 
  		# Links fixed in the "AIV notification popup" dialog
  
  * 2015-07-02 - EMERGENCY RELEASE
  		# The WMF has changed the way pagination/continuation is handled for
  		  API queries that produce many results. This breaks some legacy code,
  		  but curiously, one can still use the "legacy approach" by providing